<resources>
    <string name="app_name">LivingWorld</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_current_offers_detail">CurrentOffersDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="intro_title_quick_easy_transactions"><![CDATA[Quick & Easy Transactions]]></string>
    <string name="intro_content_quick_easy_transactions">With this apps, transactions are made easy and fast with simple click</string>
    <string name="intro_title_direct_promotion_feed">Direct Promotion Feed</string>
    <string name="intro_content_direct_promotion_feed"><![CDATA[Be the first to know our exciting offers. Enjoy our promotions with your family & friends.]]></string>
    <string name="intro_title_easy_parking_payment">Easy Parking Payment</string>
    <string name="intro_content_easy_parking_payment">Now is more easier and convenient to pay your parking fee. Scan your ticket and pay it without worry of queuing.</string>
    <string name="lbl_do_you_have">Do you have</string>
    <string name="btn_no">NO</string>
    <string name="btn_sign_in">SIGN IN</string>
    <string name="subtitle_welcome">Please enter the information below to continue</string>
    <string name="title_welcome">Welcome to LIVE CARD</string>
    <string name="lbl_name">Name</string>
    <string name="hint_enter_your_name">Enter your name</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="hint_enter_your_birth_of_date">Enter your birth of date</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="hint_enter_your_mobile_number">Enter your mobile number</string>
    <string name="lbl_email">Email</string>
    <string name="hint_enter_your_email">Enter your email</string>
    <string name="title_create_your_password">Create Your Password</string>
    <string name="subtitle_create_your_password"><![CDATA[Create your own password with minimum 6 characters (number & alphabets) and at least have one uppercase letter]]></string>
    <string name="lbl_create_password">Create Password</string>
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="hint_confirm_your_password">Confirm your password</string>
    <string name="lbl_by_clicking_sign_up">By clicking Sign Up,</string>
    <string name="lbl_i_agree_with_the">I agree with the</string>
    <string name="lbl_terms_and_conditions"><![CDATA[terms & conditions]]></string>
    <string name="title_hello">Hello</string>
    <string name="subtitle_hello">Thank you for connecting with us. Living World Mobile Application is a platform that will enhance your shopping experience. Get instant access for special offers and updates.</string>
    <string name="lbl_card_number">Card Number / ID Number (KTP) </string>
    <string name="hint_enter_your_card_number">Enter your card number / ID no (KTP)</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="subtitle_enter_your_password"><![CDATA[Enter your own password with minimum 6 characters (number & alphabets) and at least have one uppercase letter]]></string>
    <string name="btn_next">NEXT</string>
    <string name="lbl_lucky_draw">Lucky Draw</string>
    <string name="lbl_your_points">Your Points</string>
    <string name="lbl_total_transaction">TOTAL TRANSACTION</string>
    <string name="title_rewards">Point Redemption</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="black_member_description">You are now a Premiere member, get your card at the Customer Service for Free parking.</string>
    <string name="spend_more_description">Spend %1$s and upgrade to %2$s Live Card member</string>
    <string name="lbl_be_a_member">Be A Member</string>
    <string name="lbl_learn_more">Learn More</string>
    <string name="title_payment">PAYMENT</string>
    <string name="btn_scan_barcode">Scan Barcode</string>
    <string name="btn_generate_barcode">Generate Barcode</string>
    <string name="btn_parking_payment">Parking Payment</string>
    <string name="title_our_merchants">Our Merchants</string>
    <string name="title_special_offers"><![CDATA[Event & Program]]></string>
    <string name="lbl_view_all">VIEW ALL</string>
    <string name="title_account_setting">Account Setting</string>
    <string name="lbl_transaction_history">Transaction History</string>
    <string name="lbl_about_us">About us</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_give_app_a_feedback">Feedback</string>
    <string name="lbl_logout">Logout</string>
    <string name="title_about_us">About us</string>
    <string name="subtitle_about_us">Living World Alam Sutera is the only shopping center which positions itself uniquely as Home Living and Eat-tertainment Center at Serpong, Tangerang</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_customer_service">Customer Service</string>
    <string name="lbl_cs_phone_number">021 5312 8580</string>
    <string name="title_congratulation">Congratulation!</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="subtitle_contact_us">Please fill in the field below to contact us</string>
    <string name="lbl_comment">Comment</string>
    <string name="hint_enter_your_comment">Enter your comment</string>
    <string name="title_add_a_car">Add a Car</string>
    <string name="subtitle_add_a_car">Please enter the information about your car</string>
    <string name="lbl_car_type">Car Type</string>
    <string name="hint_enter_your_car_type">Enter your car type</string>
    <string name="lbl_car_colour">Car Colour</string>
    <string name="hint_enter_your_car_colour">Enter your car colour</string>
    <string name="lbl_plat_number">Plat Number</string>
    <string name="hint_enter_your_plat_number">Enter your plat number</string>
</resources>