<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.livingworld.ui.fragment.registration.Step1SignUpFragment">

    <!-- TODO: Update fragment_blank fragment layout -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_welcome"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp"/>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_welcome" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_name" />

                <EditText
                    android:id="@+id/et_nama"
                    android:textColorHint="#4d333333"
                    android:backgroundTint="#d8d8d8"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_your_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_date_of_birth" />

                <EditText
                    android:id="@+id/et_bod"
                    android:textColorHint="#4d333333"
                    android:backgroundTint="#d8d8d8"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_your_birth_of_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_mobile_number" />

                <EditText
                    android:id="@+id/et_mobile"
                    android:textColorHint="#4d333333"
                    android:backgroundTint="#d8d8d8"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_your_mobile_number"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_email" />

                <EditText
                    android:id="@+id/et_email"
                    android:textColorHint="#4d333333"
                    android:backgroundTint="#d8d8d8"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_your_email" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
