<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.livingworld.ui.fragment.registration.Step1SignUpFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- TODO: Update fragment_blank fragment layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.livingworld.ui.fragment.registration.Step1SignUpFragment">

            <!-- TODO: Update fragment_blank fragment layout -->

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_create_your_password"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_create_your_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_create_password" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_pass1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#4d333333"
                            android:backgroundTint="#d8d8d8"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:hint="@string/hint_enter_your_password"
                            android:inputType="textPassword"
                            android:windowSoftInputMode="adjustResize" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_confirm_password" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_pass2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#4d333333"
                            android:backgroundTint="#d8d8d8"
                            android:layout_marginLeft="-4dp"
                            android:layout_marginRight="-4dp"
                            android:hint="@string/hint_confirm_your_password"
                            android:inputType="textPassword"
                            android:windowSoftInputMode="adjustResize" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout"
                android:layout_marginBottom="30dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_by_clicking_sign_up"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/lbl_i_agree_with_the"
                        android:textAlignment="textEnd" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" "/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/lbl_terms_and_conditions"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
